{
    "name": "MovementActions",
    "maps": [
        {
            "name": "MoveMap",
            "id": "f1dfb33c-f068-44fa-8d51-21743b5ea225",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "71966a74-26b6-421d-94ef-0c18b4960d3c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "22a941c1-ebaa-4972-8e7c-41ff86b67e94",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "aa763511-53f4-46da-80ff-42818fff1660",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3e79a108-06c1-4eaf-840b-0b7867497857",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "92076181-d902-4bfa-8903-1deb55db3185",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0e14900a-c6e5-4bec-a33b-26efa949b700",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "208a28e1-85ad-426d-946d-e561a42dc857",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fa72a74b-af9c-421f-aca3-dcdf78cb4c4f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "92313f37-0317-464c-a559-5451b1fb1cc0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a8c4ecf1-1da3-4aa3-8aa8-10f5eee47f28",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "70f9fd3f-9909-48c7-8cd9-8479c0c1917e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}